--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <path d="M20 20l-3.5-3.5" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
           </svg>
         </span>
-        <input class="label" placeholder="Search">
+        <input class="label" placeholder="Search for stock ticker or company">
     </button>
 
     <button class="ss-pill-btn" title="Watchlist" aria-label="Watchlist">
